Archive2/67/2e088492dbe4bb/output
main.cpp:27:11: error: no matching function for call to 'Sum1'
    cout<<Sum1(b.begin(), b.end())<<endl;   
          ^~~~
main.cpp:16:8: note: candidate template ignored: couldn't infer template argument 'T'
double Sum1(typename T::const_iterator start, typename T::const_iterator end){
       ^
1 error generated.
